# googletest-PackageTest

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile.groovy  Jenkinsfile1.groovy  README.md  main.cpp  useGMock.cpp  useGTest.cpp
cmake/: utilities.cmake
cmake/Hunter/: HunterGate.cmake  config.cmake
